@@ -52,6 +52,10 @@ see
 .Bl -tag -width Ds
 .It Fl h
 Prints a help message and exits.
+.It Fl e Ar parent-xid
+Embeds the main window into the XEmbed socket  
+.Ar parent-xid
+of another process.
 .It Fl i Ar in-fifo
 Creates a named pipe
 .Ar in-fifo
@@ -1089,7 +1093,7 @@ moves the slider to value
 .El
 .Ss GtkSocket
 .Ic GtkSocket
-may be unsupported by Glade so its definition needs to be inserted
+may be unsupported by Glade, so its definition needs to be inserted
 manually into the GtkBuilder (.ui) file:
 .Bf -literal
  <child>
@@ -1111,12 +1115,12 @@ manually into the GtkBuilder (.ui) file:
 .Ic :id
 .Qc
 requests a feedback message containing the socket
-.Fa id .
+.Fa xid .
 .It Feedback
 .Qo
 .Fa name Ns
 .Ic :id
-.Fa id
+.Fa xid
 .Qc
 can be used by another process to XEmbed its widgets into the
 .Ic GtkSocket .
