@@ -47,7 +47,10 @@
           <li class="list list-dash">
             calendars,
           <li class="list list-dash">
-            drawing areas.
+            drawing areas
+          <li class="list list-dash">
+            XEmbed sockets displaying other processes.  (Pipeglade can
+            also embed itself into an XEmbed socket of another process.)
         </ul>
       <p>
         <div class="subsection">
